Fix vertical align of material icons in FAB

--- a/less/bootstrap-theme/dropdowns.less
+++ b/less/bootstrap-theme/dropdowns.less
@@ -217,3 +217,9 @@
         }
     }
 }
+
+@media (max-width: @screen-xs-max) {
+    .navbar-nav .open .dropdown-menu {
+        .box-shadow(@dropdown-shadow);
+    }
+}
