--- a/less/bootstrap-theme/fab.less
+++ b/less/bootstrap-theme/fab.less
@@ -23,6 +23,10 @@
         .btn-fab-icon-open {
             display: none;
         }
+
+        > .material-icons {
+            line-height: 57px;
+        }
     }
 }
 
