--- a/less/bootstrap-theme/input-groups.less
+++ b/less/bootstrap-theme/input-groups.less
@@ -19,6 +19,12 @@
     }
 }
 
+.input-group-btn {
+    .btn {
+        min-width: auto;
+    }
+}
+
 // Input file
 // -------------------------
 
